--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,18 +5,94 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MapyCZforTS_CS"
         mc:Ignorable="d"
-        Title="MapyCZforTS" Height="450" Width="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <ComboBox x:Name="mapsetInput" HorizontalAlignment="Left" Margin="169,12,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.042,-1.273" SelectionChanged="mapsetInput_SelectionChanged"/>
-        <Label x:Name="label" Content="Výběr mapových podkladů:" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <Label x:Name="label1" Content="Port" HorizontalAlignment="Left" Margin="10,41,0,0" Grid.Row="1" VerticalAlignment="Top"/>
-        <TextBox x:Name="portInput" HorizontalAlignment="Left" Margin="63,45,0,0" Grid.Row="1" TextWrapping="Wrap" Text="5001" VerticalAlignment="Top" Width="120" AllowDrop="False" TextChanged="portInput_TextChanged"/>
-        <CheckBox x:Name="loggingCheckbox" Content="Advanced logging" HorizontalAlignment="Left" Margin="83,142,0,0" Grid.Row="1" VerticalAlignment="Top" Checked="loggingCheckbox_Checked"/>
-        <CheckBox x:Name="cachingCheckbox" Content="Allow caching map tiles" HorizontalAlignment="Left" Margin="344,184,0,0" Grid.Row="1" VerticalAlignment="Top" Checked="cachingCheckbox_Checked"/>
-        <CheckBox x:Name="enableCheckbox" Content="Enable MapyCZforTS" HorizontalAlignment="Left" Margin="335,92,0,0" Grid.Row="1" VerticalAlignment="Top" Checked="enableCheckbox_Checked"/>
-    </Grid>
+        Title="MapyCZforTS" ResizeMode="CanMinimize" SizeToContent="WidthAndHeight">
+    <Window.Resources>
+        <!-- Source https://stackoverflow.com/a/63734191/6035781 -->
+        <Style TargetType="{x:Type Slider}">
+            <Style.Resources>
+                <Style x:Key="RepeatButtonStyle" TargetType="{x:Type RepeatButton}">
+                    <Setter Property="Focusable" Value="false" />
+                    <Setter Property="IsTabStop" Value="false" />
+                    <Setter Property="Padding" Value="0" />
+                    <Setter Property="Width" Value="20" />
+                </Style>
+            </Style.Resources>
+            <Setter Property="Stylus.IsPressAndHoldEnabled" Value="false" />
+            <Setter Property="SmallChange" Value="1" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Slider}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBox Grid.RowSpan="2" Height="Auto"
+                                Margin="0" Padding="0"
+                                VerticalAlignment="Stretch" VerticalContentAlignment="Center"
+                                Text="{Binding Value, RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay}">
+                                <TextBox.InputBindings>
+                                    <KeyBinding Gesture="Up" Command="{x:Static Slider.IncreaseSmall}" />
+                                    <KeyBinding Gesture="Down" Command="{x:Static Slider.DecreaseSmall}" />
+                                    <KeyBinding Gesture="PageUp" Command="{x:Static Slider.IncreaseLarge}" />
+                                    <KeyBinding Gesture="PageDown" Command="{x:Static Slider.DecreaseLarge}" />
+                                </TextBox.InputBindings>
+                            </TextBox>
+                            <RepeatButton Grid.Row="0" Grid.Column="1"
+                                    Command="{x:Static Slider.IncreaseSmall}">
+                                <Path Data="M4,0 L0,4 8,4 Z" Fill="Black" />
+                            </RepeatButton>
+                            <RepeatButton Grid.Row="1" Grid.Column="1"
+                                    Command="{x:Static Slider.DecreaseSmall}">
+                                <Path Data="M0,0 L4,4 8,0 Z" Fill="Black" />
+                            </RepeatButton>
+                            <Border x:Name="TrackBackground" Visibility="Collapsed">
+                                <Rectangle x:Name="PART_SelectionRange" Visibility="Collapsed" />
+                            </Border>
+                            <Thumb x:Name="Thumb" Visibility="Collapsed" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
+    <TabControl>
+        <TabItem Header="Hlavní">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="180" Margin="20">
+                <StackPanel.LayoutTransform>
+                    <ScaleTransform ScaleX="1.2" ScaleY="1.2" />
+                </StackPanel.LayoutTransform>
+                <Label Content="Výběr mapových podkladů:" />
+                <ComboBox x:Name="mapsetInput" SelectionChanged="mapsetInput_SelectionChanged" HorizontalAlignment="Stretch" />
+                <Button x:Name="toogleProxy" Content="Zapnout proxy" Margin="0,10" Padding="50,20" Click="toogleProxy_Click" />
+            </StackPanel>
+        </TabItem>
+        <TabItem Header="Nastavení">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="180" Margin="20">
+                <StackPanel.LayoutTransform>
+                    <ScaleTransform ScaleX="1.2" ScaleY="1.2" />
+                </StackPanel.LayoutTransform>
+                <Label Content="Port:" />
+                <Slider x:Name="portInput" AllowDrop="False" Minimum="80" Maximum="65535" Value="5001" ValueChanged="portInput_ValueChanged" />
+                <CheckBox x:Name="loggingCheckbox" Content="Rozšířené logování" HorizontalAlignment="Left" Margin="0,10" Checked="loggingCheckbox_Checked" Unchecked="loggingCheckbox_Checked" IsEnabled="False" />
+                <CheckBox x:Name="cachingCheckbox" Content="Ukládat mapová data" HorizontalAlignment="Left" Margin="0" Grid.Row="1" Checked="cachingCheckbox_Checked" Unchecked="cachingCheckbox_Checked" />
+            </StackPanel>
+        </TabItem>
+        <TabItem Header="O aplikaci">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="180" Margin="20">
+                <StackPanel.LayoutTransform>
+                    <ScaleTransform ScaleX="1.2" ScaleY="1.2" />
+                </StackPanel.LayoutTransform>
+
+                <Label Content="Mapy.cz for Train Simulator" />
+                <Label Content="© Jáchym Hurtík 2022" />
+
+            </StackPanel>
+        </TabItem>
+    </TabControl>
 </Window>
