--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -80,7 +80,7 @@
                 </StackPanel.LayoutTransform>
                 <Label Content="{x:Static loc:Strings.LabelPort}" />
                 <Slider x:Name="portInput" AllowDrop="False" Minimum="80" Maximum="65535" Value="5001" ValueChanged="portInput_ValueChanged" />
-                <CheckBox x:Name="loggingCheckbox" Content="{x:Static loc:Strings.CheckboxAdvancedLogging}" HorizontalAlignment="Left" Margin="0,10" Checked="loggingCheckbox_Checked" Unchecked="loggingCheckbox_Checked" IsEnabled="False" />
+                <CheckBox x:Name="loggingCheckbox" Content="{x:Static loc:Strings.CheckboxAdvancedLogging}" HorizontalAlignment="Left" Margin="0,10" Checked="loggingCheckbox_Checked" Unchecked="loggingCheckbox_Checked" />
                 <CheckBox x:Name="cachingCheckbox" Content="{x:Static loc:Strings.CheckboxCaching}" HorizontalAlignment="Left" Margin="0" Grid.Row="1" Checked="cachingCheckbox_Checked" Unchecked="cachingCheckbox_Checked" />
             </StackPanel>
         </TabItem>
