--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -70,6 +70,14 @@
                 </StackPanel.LayoutTransform>
                 <Label Content="{x:Static loc:Strings.LabelSelectMapset}" />
                 <ComboBox x:Name="mapsetInput" SelectionChanged="mapsetInput_SelectionChanged" HorizontalAlignment="Stretch" />
+                <Label>
+                    <Label.Content>
+                        <TextBlock>
+                            <Run Text="Maximální zoom:" />
+                            <Run x:Name="MaxZoomText" Text="5" />
+                        </TextBlock>
+                    </Label.Content>
+                </Label>
                 <Button x:Name="toogleProxy" Content="{x:Static loc:Strings.ButtonEnableProxy}" Margin="0,10" Padding="50,20" Click="toogleProxy_Click" />
             </StackPanel>
         </TabItem>
